--- a/joodo/assets/css/common2.css
+++ b/joodo/assets/css/common2.css
@@ -2,6 +2,7 @@
 .container {
     width: 1280px;
     margin: 0 auto;
+    position: relative;
 }
 
 /* 로우 영역 */
@@ -132,7 +133,101 @@
 }
 
 /* footer */
-#footer {}
+#footer {
+    background: #000;
+    border-top: 1px solid #F9F871;
+}
+.footer_sns {
+    position: absolute;
+    right: 17px; top: 33px;
+    z-index: 1;
+}
+.footer_sns li {
+    display: inline-block;
+    margin: 0 2px;
+}
+.footer_sns li a {
+    display: block;
+    width: 36px;
+    height: 36px;
+}
+.footer_sns .icon {
+    background-image: url("../img/icon.png");
+}
+.footer_sns li.s1 {
+    background-position: 0 -375px;
+}
+.footer_sns li.s2 {
+    background-position: -36px -375px;
+}
+.footer_sns li.s3 {
+    background-position: -72px -375px;
+}
+.footer_sns li.s4 {
+    background-position: -108px -375px;
+}
+.footer_sns li.s5 {
+    background-position: -144px -375px;
+}
+.footer_sns li.s1:hover {
+    background-position: 0 -411px;
+}
+.footer_sns li.s2:hover {
+    background-position: -36px -411px;
+}
+.footer_sns li.s3:hover {
+    background-position: -72px -411px;
+}
+.footer_sns li.s4:hover {
+    background-position: -108px -411px;
+}
+.footer_sns li.s5:hover {
+    background-position: -144px -411px;
+}
+.footer_sns .tel {
+    text-align: right;
+    padding-top: 5px;
+}
+.footer_sns .tel a {
+    color: #8f8f8f;
+    font-size: 21px;
+}
+.footer_sns .tel a em {
+    color: #fff;
+}
+.footer_info {
+    padding: 50px 0;
+    width: 60%;
+}
+.footer_info h2 img {
+    width: 8%;
+}
+.footer_info ul {
+    padding: 15px 0;
+}
+.footer_info ul li {
+    display: inline;
+    padding-right: 16px;
+    white-space: nowrap;
+    position: relative;
+}
+.footer_info ul li::after {
+    content: '';
+    position: absolute;
+    right: 5px; top: 5px;
+    width: 1px; height: 11px;
+    background-color: #8f8f8f;
+}
+.footer_info ul li:last-child:after {
+    width: 0; height: 0;
+}
+.footer_info li a {
+    color: #8f8f8f;
+}
+.footer_info address p {
+    color: #8f8f8f;
+    padding-bottom: 15px;
+}
 
 @media(max-width: 1300px){
     .container {
