--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -384,7 +384,7 @@
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	background: #f2a1d1;
+	background: #0585accc;
 	color: #FFFFFF;
 	font-size: 25px;
 	font-weight: 300;
@@ -407,7 +407,7 @@
 	width: 100%;
 	height: 32px;
 	top: 50%;
-	color: #a92c76;
+	color: #e5ff00;
 	font-size: 20px;
 	text-transform: uppercase;
 	line-height: 20px;
