--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -52,9 +52,9 @@ body {background:#f1f4fb url(../img/body_bg.gif)}
 /* Header  */
 
 #header{
-	background: url(../img/mainBG.jpg) no-repeat center center;
-	background-size: cover;
-	/* background-image: linear-gradient(45deg, #a7a6cb 0%, #8989ba 52%, #8989ba 100%); */
+	/* background: url(../img/bg.jpg) no-repeat center top; */
+	/* background-size: cover; */
+	background-image: linear-gradient(to top, #e8198b 0%, #c7eafd 100%);
 	padding: 10px 0 10px 0px;
 }
 #header.sub {
