--- a/refer-effect/assets/scss/style.scss
+++ b/refer-effect/assets/scss/style.scss
@@ -223,6 +223,7 @@ $gradient3: linear-gradient(to top, #c71d6f 0%, #d09693 100%);
 $gradient4: linear-gradient(to top, #00dbde 0%, #fc00ff 100%);
 $gradient5: linear-gradient(to top, #cc208e 0%, #6713d2 100%);
 $gradient6: linear-gradient(120deg, #f093fb 0%, #f5576c 100%);
+$gradient7: linear-gradient(120deg, #f093fb 0%, #f5576c 100%);
 
 $text1: linear-gradient(to bottom, #8200c9, #33004e);
 $text2: linear-gradient(to top, #a03136 0%, #2400f0 100%);
